apps/base/calibre/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: calibre-web-automated
  labels:
    app.kubernetes.io/name: calibre-web-automated
spec:
  ports:
    - port: 8083
  selector:
    app.kubernetes.io/name: calibre-web-automated
---
apiVersion: v1
kind: Service
metadata:
  name: calibre-web-automated-book-downloader
  labels:
    app.kubernetes.io/name: calibre-web-automated
spec:
  ports:
    - port: 8084
  selector:
    app.kubernetes.io/name: calibre-web-automated
